crates/cosmon-thin-cli/tests/snapshots/help_snapshots__verbs_check.snap
---
source: crates/cosmon-thin-cli/tests/help_snapshots.rs
expression: body
---
cs-thin verbs --check (cosmon-thin-cli v0.1.0, target: (unset))

✓ avatar_audit   GET    /v1/avatar/:instance_id/audit
✓ avatar_grant   POST   /v1/avatar/:instance_id/grant
✓ avatar_incarnate POST   /v1/avatar/:instance_id/incarnate
✓ avatar_mould_info GET    /v1/avatar/:instance_id/mould-info
✓ avatar_status  GET    /v1/avatar/:instance_id/status
✓ collapse       POST   /v1/molecules/:id/collapse
✓ converse       POST   /v1/avatar/converse
✓ done           POST   /v1/molecules/:id/done
✓ ensemble       GET    /v1/molecules
✓ freeze         POST   /v1/molecules/:id/freeze
✓ nucleate       POST   /v1/molecules
✓ observe        GET    /v1/molecules/:id
✓ run            POST   /v1/molecules/:id/run
✓ stuck          POST   /v1/molecules/:id/stuck
✓ tackle         POST   /v1/molecules/:id/tackle
✓ tag            POST   /v1/molecules/:id/tags

⚠ evolve         OPERATOR-ONLY (ADR-080 §5.1)
⚠ complete       OPERATOR-ONLY (ADR-080 §5.1)
⚠ security activate OPERATOR-ONLY (ADR-080 §5.1)
⚠ kill           OPERATOR-ONLY (ADR-080 §5.1)
⚠ purge          OPERATOR-ONLY (ADR-080 §5.1)
⚠ reconcile      OPERATOR-ONLY (ADR-080 §5.1)
⚠ verify         OPERATOR-ONLY (ADR-080 §5.1) — V2 candidate
⚠ whisper        OPERATOR-ONLY (ADR-080 §5.1)
⚠ drop           OPERATOR-ONLY (ADR-080 §5.1)

─────────────────────────────────────────────────
16/16 RPP-exposable verbs covered.
9 operator-only verbs by design (see ADR-080 §5.1).
Status: COMPLETE.
